--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,12 @@ body {
     color: #ffffff;
     text-align: center;
     margin: 0;
+    font-family: 'PT Serif', serif;
+    min-height: 100vh; /* Задаем минимальную высоту для полной высоты экрана */
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    font-family: 'PT Serif', serif;
+    padding-bottom: 50px; /* Добавляем отступ снизу для пространства под историей */
 }
 
 .container {
@@ -23,7 +22,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 20px; /* Добавляем промежуток между элементами внутри контейнера */
+    gap: 20px;
+    width: 100%; /* Убедитесь, что ширина адаптируется */
 }
 
 #magic-ball {
@@ -125,10 +125,9 @@ button:hover {
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 0 15px #00aaff, 0 0 30px #00aaff;
-    max-height: 300px;
     overflow-y: auto;
-    margin-top: 20px; /* Отступ сверху, чтобы отделить от кнопки */
-    width: 100%; /* Занимаем всю ширину контейнера */
+    margin-top: 20px;
+    width: 100%;
 }
 
 #history-container {
